name:                fuzzer
version:             0.1.0.0
homepage:            https://github.com/m-schmidt/fuzzer#readme
license:             BSD3
license-file:        LICENSE
author:              Michael Schmidt
maintainer:          github@mschmidt.me
copyright:           2017 Michael Schmidt
category:            Development
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable fuzzer
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Check
                     , Commandline
                     , Convention
                     , ConventionTest
                     , Error
                     , Expression
                     , ExpressionTest
                     , Loop
                     , LoopTest
                     , Str
  default-language:    Haskell2010
  build-depends:       base >= 4.10 && < 4.11
                     , bytestring
                     , containers
                     , directory
                     , process
                     , template-haskell >= 2.12 && < 2.13
                     , QuickCheck
  ghc-options:         -Wall -O2
